# kmsync

./: .gitignore  Cargo.toml  README.md  connect.md  todo.md  ui.md
.cargo/: config.toml
assets/macos/: KMSync.icns
configs/: daemon.example.json  kmsync-server.example.json  mac-to-windows.profile.json  windows-to-mac.profile.json
crates/kmsync/: Cargo.toml
crates/kmsync-core/: Cargo.toml
crates/kmsync-core/src/: desktop.rs  event.rs  input_state.rs  keymap.rs  lib.rs  local_ipc.rs  profile.rs  protocol.rs
crates/kmsync-daemon/: Cargo.toml
crates/kmsync-daemon/src/: main.rs  transport.rs
crates/kmsync-daemon/src/platform/: macos.rs  mod.rs  unsupported.rs
crates/kmsync-server/: Cargo.toml
crates/kmsync-server/src/: main.rs
crates/kmsync-ui/: Cargo.toml
crates/kmsync-ui/src/: control_panel.rs  desktop_panel.rs  layout_editor.rs  lib.rs
crates/kmsync/src/: desktop_config.rs  desktop_state.rs  local_config.rs  main.rs  native_desktop.rs  transport.rs  windows_service.rs
crates/kmsync/src/client/: mod.rs
crates/kmsync/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
docs/: ARCHITECTURE_AND_SECURITY.md  BACKEND_DESIGN.md  COMPATIBILITY.md  DESKTOP_CLIENT_DESIGN.md  IMPLEMENTATION.md  PACKAGING.md  PRODUCT_REQUIREMENTS.md  README.md  RELEASE.md  USER_GUIDE.md
packaging/linux/: README.md  deploy-server.sh  kmsync-server.service
packaging/macos/: build-pkg.sh
packaging/windows/: build-nsis.ps1  build-portable.sh  enable-firewall.cmd  kmsync-daemon.nsi  kmsync.nsi  start-core-service.cmd
tools/: cross-check-cc.cmd
